# dave_the_diver

./: Dockerfile  README.md  docker-compose.yml  manage.py  pyproject.toml  requirements.txt
dave/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
diver/: admin.py  apps.py  models.py  tasks.py  views.py
diver/migrations/: 0001_initial.py
